force-app/main/default/objects/User_Preference__c/User_Preference__c.object-meta.xml
<CustomObject>
    <label>User Preference</label>
    <nameField>
        <displayFormat>Pref No - {0000}</displayFormat>
        <label>User Preference No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>