force-app/main/default/objects/User_Preference__c/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_Preferences</valueSetName>
    </valueSet>
</CustomField>