force-app/main/default/objects/User_Preference__c/fields/Notification_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preferences__c</fullName>
    <label>Notification Preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>