force-app/main/default/objects/User_Preference__c/fields/Preferred_Categories__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Categories__c</fullName>
    <label>Preferred Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Child Development</fullName>
            </value>
            <value>
                <fullName>Community Support</fullName>
            </value>
            <value>
                <fullName>Parenting Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>