force-app/main/default/objects/User_Preference__c/fields/Privacy_Settings__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Settings__c</fullName>
    <label>Privacy Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>