force-app/main/default/objects/User_Preference__c/listViews/Content_Review_Queue_User_Preference.listView-meta.xml
<ListView>
    <fullName>Content_Review_Queue_User_Preference</fullName>
    <filterScope>Queue</filterScope>
    <label>Content Review Queue</label>
    <queue>Content_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>