force-app/main/default/objects/User_Preference__c/listViews/Event_Registration_Queue_User_Preference.listView-meta.xml
<ListView>
    <fullName>Event_Registration_Queue_User_Preference</fullName>
    <filterScope>Queue</filterScope>
    <label>Event Registration Queue</label>
    <queue>Event_Registration_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>