force-app/main/default/objects/User_Preference__c/listViews/Feedback_Review_Queue_User_Preference.listView-meta.xml
<ListView>
    <fullName>Feedback_Review_Queue_User_Preference</fullName>
    <filterScope>Queue</filterScope>
    <label>Feedback_Review_Queue</label>
    <queue>Feedback_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>