force-app/main/default/objects/User_Preference__c/listViews/Newsletter_Subscription_Queue_User_Preference.listView-meta.xml
<ListView>
    <fullName>Newsletter_Subscription_Queue_User_Preference</fullName>
    <filterScope>Queue</filterScope>
    <label>Newsletter Subscription Queue</label>
    <queue>Newsletter_Subscription_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>