force-app/main/default/objects/User_Preference__c/listViews/Report_Abuse_Queue_User_Preference.listView-meta.xml
<ListView>
    <fullName>Report_Abuse_Queue_User_Preference</fullName>
    <filterScope>Queue</filterScope>
    <label>Report Abuse Queue</label>
    <queue>Report_Abuse_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>