force-app/main/default/objects/User_Preference__c/listViews/User_Support_Queue_User_Preference.listView-meta.xml
<ListView>
    <fullName>User_Support_Queue_User_Preference</fullName>
    <filterScope>Queue</filterScope>
    <label>User Support Queue</label>
    <queue>User_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>