force-app/main/default/objects/User_Preference__c/listViews/Volunteer_Opportunity_Queue_User_Preference.listView-meta.xml
<ListView>
    <fullName>Volunteer_Opportunity_Queue_User_Preference</fullName>
    <filterScope>Queue</filterScope>
    <label>Volunteer Opportunity Queue</label>
    <queue>Volunteer_Opportunity_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>